# tauri-photo

./: .gitignore  README.md  README.zh-CN.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  data.txt  tauri.conf.json
src-tauri/src/: clip.rs  copy.rs  errors.rs  main.rs  menu.rs  setup.rs  watcher.rs  windows.rs
src/components/: Counter.vue  Footer.vue  Image.vue  Menu.vue
src/composables/: clip.ts  dark.ts  data.ts  index.ts  list.ts
src/pages/: img-list.vue  index.vue  list.vue  setting.vue
