[package]
name = "photo"
version = "0.1.0"
description = "A Tauri Photo Server"
authors = ["you"]
license = ""
repository = ""
default-run = "photo"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all", "system-tray"] }
tao = "0.8.5"
env_logger = "0.9.0"
arboard = "2.1.1"
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
clipboard-master = "3.1.3"
base64 = "0.13.0"
log = "0.4.17"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
